<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PasswdManager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="id">ID</string>
    <string name="web1">Web1</string>
    <string name="web2">Web2</string>
    <string name="web3">Web3</string>
    <string name="web4">Web4</string>
    <string name="web5">Web5</string>
    <string name="com">DG_COM</string>
    <string name="status">Status</string>
    <string name="sod">DG_SOD</string>
    <string name="DS">View Document Signer</string>
    <string name="AA">View AA public key</string>
    <string name="CA">View CA public key</string>
    <string name="about">About....</string>
    
    
    <string name="enter1">Enter&#8230;</string>
    <string name="enter2">Enter</string>
    <string name="prompt_password">Password</string>
    <string name="ok">OK</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    
    <string name="back_button">Back</string>
    <string name="title_activity_show_contents">ShowContentsActivity</string>
    <string name="title_activity_passwd_enter">PasswdEnterActivity</string>

</resources>
