<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hig.no.passwdmanager.MainActivity" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <ImageView
                android:id="@+id/pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/id"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/web1" />

                <TextView
                    android:id="@+id/web1"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/web2" />

                <TextView
                    android:id="@+id/web2"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/web3" />

                <TextView
                    android:id="@+id/web3"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/web4" />

                <TextView
                    android:id="@+id/web4"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/com" />

                <TextView
                    android:id="@+id/com"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="" />
            </TableRow>
            
             <TableRow>

                <TextView
                    android:layout_column="1"
                    android:padding="3dip"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/BAC"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="BAC" />
                
                <TextView
                    android:id="@+id/EAC"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="EAC" />
                
                <TextView
                    android:id="@+id/AA"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="AA" />
                
                <TextView
                    android:id="@+id/PA"
                    android:gravity="right"
                    android:padding="3dip"
                    android:text="PA" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</RelativeLayout>